# KuroLink

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  local.rs  main.rs  ssh.rs  state.rs
src/components/: ConnectionScreen.css  ConnectionScreen.tsx  KuroLinkLogo.css  KuroLinkLogo.tsx  MainView.css  MainView.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TerminalPanel.css  TerminalPanel.tsx  TopBar.css  TopBar.tsx
src/lib/: ipc.ts  types.ts  useKeyboardShortcuts.ts
