[package]
name = "kurolink"
version = "0.2.1"
description = "Remote access client for kurobox"
authors = ["Miyo Kanemitsu"]
license = "Apache-2.0"
repository = "https://github.com/miyo-hime/KuroLink"
default-run = "kurolink"
edition = "2021"

[lib]
name = "kurolink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# ring backend required: aws-lc-sys needs NASM/CMake on Windows which complicates builds
russh = { version = "0.58", default-features = false, features = ["ring", "flate2"] }
tokio = { version = "1", features = ["sync", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
